# stina

./: .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  =  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TANDOOR_QUICKSTART.md  TANDOOR_SETUP_GUIDE.md  TANDOOR_TESTING_GUIDE.md  commitlint.config.cjs  docker-compose.dev.yml  docker-compose.yml  electron-builder.config.cjs  eslint.config.js  instructions.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  release-please-config.json  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.serena/: project.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
assets/: stina.afdesign  wave.af
claudedocs/: gemini-fix-empty-contents.md  gemini-sdk-implementation-summary.md  gemini-sdk-integration-research.md
core/: .eslintrc.cjs  drizzle.config.ts  package.json  tsconfig.json  tsup.config.ts
docs/: architecture.md  authentication.md  chat-package.md  decisions.md  error-handling.md  extension-panels-and-scheduler.md  extensions-updates-2026-01-23.md  introduction.md  multi-user-implementation-checklist.md  patterns.md  provider-config-schema.md  recurring-todos-plan.md  themes.md  tools-settings-plan.md
docs-old/: architecture.md  configuration.md  database.md  extension-system-plan.md  extensions.md  introduction.md  investigation-userid-flow.md  release-process.md
old-version (ignore)/: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  (+1 more)
(+427 files in other folders)
