[package]
name = "pro-assist-desktop"
version = "0.1.0"
authors = ["Pro Assist"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["macos-private-api"] }
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
